modules/antlr/src/main/tmp/ExcelParser.java
// Generated from Excel.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExcelParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__5=1, T__4=2, T__3=3, T__2=4, T__1=5, T__0=6, TRUE=7, FALSE=8, NAME=9, 
		WS=10, STRING=11, ALPHA=12, SIGN=13, LONG=14, DIGIT=15, FLOAT=16, EXPONENT=17, 
		POW=18, MUL=19, DIV=20, JOIN=21, GE=22, LE=23, NE=24, GT=25, LT=26, EQ=27;
	public static final String[] tokenNames = {
		"<INVALID>", "'$ROW$'", "'%'", "'('", "')'", "':'", "','", "TRUE", "FALSE", 
		"NAME", "WS", "STRING", "ALPHA", "SIGN", "LONG", "DIGIT", "FLOAT", "EXPONENT", 
		"'^'", "'*'", "'/'", "'&'", "'>='", "'<='", "'<>'", "'>'", "'<'", "'='"
	};
	public static final int
		RULE_prog = 0, RULE_eval = 1, RULE_op_join = 2, RULE_op_plus_minus = 3, 
		RULE_op_mul_div = 4, RULE_op_pow = 5, RULE_signed_eval_unit = 6, RULE_eval_unit = 7, 
		RULE_p_eval_unit = 8, RULE_percent = 9, RULE_function = 10, RULE_cell = 11, 
		RULE_range = 12;
	public static final String[] ruleNames = {
		"prog", "eval", "op_join", "op_plus_minus", "op_mul_div", "op_pow", "signed_eval_unit", 
		"eval_unit", "p_eval_unit", "percent", "function", "cell", "range"
	};

	@Override
	public String getGrammarFileName() { return "Excel.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExcelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ExcelParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26); eval();
			setState(27); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EvalContext extends ParserRuleContext {
		public List<Op_joinContext> op_join() {
			return getRuleContexts(Op_joinContext.class);
		}
		public Op_joinContext op_join(int i) {
			return getRuleContext(Op_joinContext.class,i);
		}
		public TerminalNode NE() { return getToken(ExcelParser.NE, 0); }
		public TerminalNode LT() { return getToken(ExcelParser.LT, 0); }
		public TerminalNode LE() { return getToken(ExcelParser.LE, 0); }
		public TerminalNode EQ() { return getToken(ExcelParser.EQ, 0); }
		public TerminalNode GT() { return getToken(ExcelParser.GT, 0); }
		public TerminalNode GE() { return getToken(ExcelParser.GE, 0); }
		public EvalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterEval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitEval(this);
		}
	}

	public final EvalContext eval() throws RecognitionException {
		EvalContext _localctx = new EvalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_eval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29); op_join();
			setState(32);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GE) | (1L << LE) | (1L << NE) | (1L << GT) | (1L << LT) | (1L << EQ))) != 0)) {
				{
				setState(30);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GE) | (1L << LE) | (1L << NE) | (1L << GT) | (1L << LT) | (1L << EQ))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(31); op_join();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_joinContext extends ParserRuleContext {
		public List<Op_plus_minusContext> op_plus_minus() {
			return getRuleContexts(Op_plus_minusContext.class);
		}
		public Op_plus_minusContext op_plus_minus(int i) {
			return getRuleContext(Op_plus_minusContext.class,i);
		}
		public List<TerminalNode> JOIN() { return getTokens(ExcelParser.JOIN); }
		public TerminalNode JOIN(int i) {
			return getToken(ExcelParser.JOIN, i);
		}
		public Op_joinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_join; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterOp_join(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitOp_join(this);
		}
	}

	public final Op_joinContext op_join() throws RecognitionException {
		Op_joinContext _localctx = new Op_joinContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_op_join);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); op_plus_minus();
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==JOIN) {
				{
				{
				setState(35); match(JOIN);
				setState(36); op_plus_minus();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_plus_minusContext extends ParserRuleContext {
		public Op_mul_divContext op_mul_div(int i) {
			return getRuleContext(Op_mul_divContext.class,i);
		}
		public TerminalNode SIGN(int i) {
			return getToken(ExcelParser.SIGN, i);
		}
		public List<TerminalNode> SIGN() { return getTokens(ExcelParser.SIGN); }
		public List<Op_mul_divContext> op_mul_div() {
			return getRuleContexts(Op_mul_divContext.class);
		}
		public Op_plus_minusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_plus_minus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterOp_plus_minus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitOp_plus_minus(this);
		}
	}

	public final Op_plus_minusContext op_plus_minus() throws RecognitionException {
		Op_plus_minusContext _localctx = new Op_plus_minusContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_op_plus_minus);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); op_mul_div();
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SIGN) {
				{
				{
				setState(43); match(SIGN);
				setState(44); op_mul_div();
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_mul_divContext extends ParserRuleContext {
		public List<TerminalNode> DIV() { return getTokens(ExcelParser.DIV); }
		public TerminalNode MUL(int i) {
			return getToken(ExcelParser.MUL, i);
		}
		public TerminalNode DIV(int i) {
			return getToken(ExcelParser.DIV, i);
		}
		public List<TerminalNode> MUL() { return getTokens(ExcelParser.MUL); }
		public List<Op_powContext> op_pow() {
			return getRuleContexts(Op_powContext.class);
		}
		public Op_powContext op_pow(int i) {
			return getRuleContext(Op_powContext.class,i);
		}
		public Op_mul_divContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_mul_div; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterOp_mul_div(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitOp_mul_div(this);
		}
	}

	public final Op_mul_divContext op_mul_div() throws RecognitionException {
		Op_mul_divContext _localctx = new Op_mul_divContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_op_mul_div);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); op_pow();
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MUL || _la==DIV) {
				{
				{
				setState(51);
				_la = _input.LA(1);
				if ( !(_la==MUL || _la==DIV) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(52); op_pow();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Op_powContext extends ParserRuleContext {
		public Signed_eval_unitContext signed_eval_unit(int i) {
			return getRuleContext(Signed_eval_unitContext.class,i);
		}
		public TerminalNode POW(int i) {
			return getToken(ExcelParser.POW, i);
		}
		public List<TerminalNode> POW() { return getTokens(ExcelParser.POW); }
		public List<Signed_eval_unitContext> signed_eval_unit() {
			return getRuleContexts(Signed_eval_unitContext.class);
		}
		public Op_powContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_op_pow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterOp_pow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitOp_pow(this);
		}
	}

	public final Op_powContext op_pow() throws RecognitionException {
		Op_powContext _localctx = new Op_powContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_op_pow);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); signed_eval_unit();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==POW) {
				{
				{
				setState(59); match(POW);
				setState(60); signed_eval_unit();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Signed_eval_unitContext extends ParserRuleContext {
		public Eval_unitContext eval_unit() {
			return getRuleContext(Eval_unitContext.class,0);
		}
		public TerminalNode SIGN() { return getToken(ExcelParser.SIGN, 0); }
		public Signed_eval_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signed_eval_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterSigned_eval_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitSigned_eval_unit(this);
		}
	}

	public final Signed_eval_unitContext signed_eval_unit() throws RecognitionException {
		Signed_eval_unitContext _localctx = new Signed_eval_unitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_signed_eval_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_la = _input.LA(1);
			if (_la==SIGN) {
				{
				setState(66); match(SIGN);
				}
			}

			setState(69); eval_unit();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eval_unitContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(ExcelParser.FLOAT, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode TRUE() { return getToken(ExcelParser.TRUE, 0); }
		public TerminalNode STRING() { return getToken(ExcelParser.STRING, 0); }
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public TerminalNode FALSE() { return getToken(ExcelParser.FALSE, 0); }
		public P_eval_unitContext p_eval_unit() {
			return getRuleContext(P_eval_unitContext.class,0);
		}
		public CellContext cell() {
			return getRuleContext(CellContext.class,0);
		}
		public PercentContext percent() {
			return getRuleContext(PercentContext.class,0);
		}
		public TerminalNode LONG() { return getToken(ExcelParser.LONG, 0); }
		public Eval_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterEval_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitEval_unit(this);
		}
	}

	public final Eval_unitContext eval_unit() throws RecognitionException {
		Eval_unitContext _localctx = new Eval_unitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_eval_unit);
		try {
			setState(81);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71); match(TRUE);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72); match(FALSE);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73); match(LONG);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(74); match(STRING);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(75); match(FLOAT);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(76); percent();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(77); cell();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(78); range();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(79); function();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(80); p_eval_unit();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class P_eval_unitContext extends ParserRuleContext {
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public P_eval_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_p_eval_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterP_eval_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitP_eval_unit(this);
		}
	}

	public final P_eval_unitContext p_eval_unit() throws RecognitionException {
		P_eval_unitContext _localctx = new P_eval_unitContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_p_eval_unit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); match(3);
			setState(84); eval();
			setState(85); match(4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PercentContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(ExcelParser.FLOAT, 0); }
		public TerminalNode LONG() { return getToken(ExcelParser.LONG, 0); }
		public PercentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_percent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterPercent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitPercent(this);
		}
	}

	public final PercentContext percent() throws RecognitionException {
		PercentContext _localctx = new PercentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_percent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !(_la==LONG || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(88); match(2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public List<EvalContext> eval() {
			return getRuleContexts(EvalContext.class);
		}
		public EvalContext eval(int i) {
			return getRuleContext(EvalContext.class,i);
		}
		public TerminalNode NAME() { return getToken(ExcelParser.NAME, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(NAME);
			setState(91); match(3);
			setState(100);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << TRUE) | (1L << FALSE) | (1L << NAME) | (1L << STRING) | (1L << SIGN) | (1L << LONG) | (1L << FLOAT))) != 0)) {
				{
				setState(92); eval();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==6) {
					{
					{
					setState(93); match(6);
					setState(94); eval();
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(102); match(4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CellContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(ExcelParser.NAME, 0); }
		public CellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cell; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterCell(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitCell(this);
		}
	}

	public final CellContext cell() throws RecognitionException {
		CellContext _localctx = new CellContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cell);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); match(NAME);
			setState(106);
			_la = _input.LA(1);
			if (_la==1) {
				{
				setState(105); match(1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RangeContext extends ParserRuleContext {
		public CellContext cell(int i) {
			return getRuleContext(CellContext.class,i);
		}
		public List<CellContext> cell() {
			return getRuleContexts(CellContext.class);
		}
		public RangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).enterRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExcelListener ) ((ExcelListener)listener).exitRange(this);
		}
	}

	public final RangeContext range() throws RecognitionException {
		RangeContext _localctx = new RangeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_range);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); cell();
			setState(109); match(5);
			setState(110); cell();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		ATNSimulator.deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
	}
}